--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="25dp"
     >
 
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="106dp"
+        android:layout_height="76dp"
+
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="111dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginBottom="494dp"
+        android:contentDescription="TODO"
+        app:srcCompat="@mipmap/ic_launcher" />
+
     <RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
         android:layout_height="match_parent" android:visibility="visible">
+
         <LinearLayout android:id="@+id/addressContainer" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical"
             android:gravity="center">
@@ -19,10 +34,12 @@
                 android:text="20 April 2012, 20:08 PM"/>
         </LinearLayout>
 
-
         <LinearLayout android:id="@+id/overviewContainer" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical"
             android:layout_centerInParent="true">
+
+
+
 
             <TextView android:id="@+id/status" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="18dp"
@@ -135,16 +152,8 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
+
     </RelativeLayout>
-
-
-    <ProgressBar android:id="@+id/loader" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_centerInParent="true"
-        android:visibility="gone"/>
-
-    <TextView android:id="@+id/errorText" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_centerInParent="true"
-        android:visibility="gone" android:text="Something went wrong"/>
-
 
 </RelativeLayout>
