--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,10 +31,10 @@
             >
             <TextView android:id="@+id/address" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="24dp"
-                android:text="DHAKA, BD"/>
+               />
             <TextView android:id="@+id/updated_at" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="14dp"
-                android:text="20 April 2012, 20:08 PM"/>
+               />
         </LinearLayout>
 
         <LinearLayout android:id="@+id/overviewContainer" android:layout_width="match_parent"
@@ -48,21 +48,21 @@
             <TextView android:id="@+id/status" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="18dp"
                 android:layout_gravity="center"
-                android:text="Clear Sky"/>
+                />
             <TextView android:id="@+id/temp" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="90dp"
                 android:fontFamily="sans-serif-thin" android:layout_gravity="center"
-                android:text="29°C"
+
                 />
 
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:orientation="horizontal" android:gravity="center">
                 <TextView android:id="@+id/temp_min" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:text="Min Temp: 05:05 AM"/>
+                    android:layout_height="wrap_content" />
                 <Space android:layout_width="50dp" android:layout_height="wrap_content"/>
 
                 <TextView android:id="@+id/temp_max" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:text="Max Temp: 05:05 PM"/>
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
         </LinearLayout>
@@ -84,7 +84,7 @@
                         android:textSize="12dp" android:text="Sunrise"/>
                     <TextView android:id="@+id/sunrise" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="06:40 AM"/>
+                        />
                 </LinearLayout>
                 <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                 <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
@@ -98,7 +98,7 @@
                         android:textSize="12dp" android:text="Sunset"/>
                     <TextView android:id="@+id/sunset" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="06:40 AM"/>
+                        />
                 </LinearLayout>
                 <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                 <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
@@ -112,7 +112,7 @@
                         android:textSize="12dp" android:text="Wind"/>
                     <TextView android:id="@+id/wind" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="06:40 AM"/>
+                        />
                 </LinearLayout>
             </LinearLayout>
 
@@ -131,7 +131,7 @@
                         android:textSize="12dp" android:text="Pressure"/>
                     <TextView android:id="@+id/pressure" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="06:40 AM"/>
+                        />
                 </LinearLayout>
                 <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                 <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
@@ -145,7 +145,7 @@
                         android:textSize="12dp" android:text="Humidity"/>
                     <TextView android:id="@+id/humidity" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="06:40 AM"/>
+                        />
                 </LinearLayout>
 
 
@@ -154,5 +154,6 @@
 
 
     </RelativeLayout>
+
 
 </RelativeLayout>
